# binG

./: $null  .cscope.out  .deepsource.toml  .dockerignore  .gitattributes  .gitignore  .npmrc  .qwenignore  .tags  .vercelignore  000.md  000AUTH_SYSTEM_PLAN.md  000TOOLS_INTEGRATION_PLAN.md  0ads.md  0context.md  0lastFixes.md  0loop.md  0r.json  0upgrades.md  1004r.json  1004rX.json  11r.json  11rX.json  120r.json  1rX.json  2error.md  3r.json  4FINALecs.md  4almosCOMPLETEecs.md  4enhanced-code-system.md  ACCESSIBILITY_CHECKER.md  ADDITIONAL_FILES_ANALYSIS.md  ADVANCED_TAILWIND_FEATURES.md  AGENTIC_UI_IMPLEMENTATION.md  AGENTS.md  ALL_FIXES_IMPLEMENTED.md  ALL_PHASES_COMPLETE.md  ANALYSIS_AND_FIX_PLAN.md  ARCHITECTURE_IMPROVEMENTS_STATUS.md  ARCHITECTURE_IMPROVEMENT_PLAN.md  (+303 more)
.claude/: settings.json
.jarvis/: queue-pr-24.json  (+5 more)
desktop/src-tauri/: Cargo.toml  gen-icon.cjs  tauri.conf.json
desktop/src-tauri/scripts/: prepare-web-assets.ps1
desktop/src-tauri/src/: commands.rs  desktop_automation.rs  lib.rs  log.rs  main.rs  settings.rs
desktop/src-tauri/static/: index.html
desktop/src-tauri/web-assets/: .keep  package.json
desktop/src-tauri/web-assets/frontend/: index.html
desktop/src-tauri/web-assets/web/: mcp.config.json  package.json  server.js
desktop/src-tauri/web-assets/web/app/api/chat/: filesystem-edits.ts
desktop/src-tauri/web-assets/web/components/plugins/: ai-art-gallery-tab.tsx  ai-enhancer-plugin.tsx  ai-prompt-library-plugin.tsx  api-playground-pro-plugin.tsx  archive-org-embed-plugin.tsx  calculator-plugin.tsx  cloud-pro-plugin.tsx  cloud-storage-plugin.tsx  code-formatter-plugin.tsx  code-sandbox-plugin.tsx  creative-studio-plugin.tsx  data-science-workbench-plugin.tsx  data-visualization-builder-plugin.tsx  devops-command-center-plugin.tsx  duckduckgo-embed-plugin.tsx  e2b-desktop-plugin.tsx  events-panel.tsx  flow-engine.tsx  frontier-feed-plugin.tsx  generic-embed-plugin.tsx  git-explorer-pro-plugin.tsx  github-explorer-plugin.tsx  glitch-embed-plugin.tsx  huggingface-spaces-pro-plugin.tsx  immersive-view.tsx  legal-document-plugin.tsx  mind-map-tab.tsx  music-visualizer-tab.tsx  n8n-workflows-tab.tsx  note-taker-plugin.tsx  plugin-dependency-visualizer.tsx  plugin-marketplace.tsx  sandbox-plugin.tsx  url-utilities-plugin.tsx  wiki-plugin.tsx  workflow-visualizer.tsx
desktop/src-tauri/web-assets/web/lib/: code-parser.ts
desktop/src-tauri/web-assets/web/lib/auth/: desktop-auth-bypass.ts
desktop/src-tauri/web-assets/web/lib/bash/: bash-tool.ts  dag-executor.ts
desktop/src-tauri/web-assets/web/lib/chat/: opencode-sdk-provider.ts  tool-call-tracker.ts
desktop/src-tauri/web-assets/web/lib/database/: schema.sql
desktop/src-tauri/web-assets/web/lib/database/migrations/: 001-events-table.sql  003-approval-requests.sql  012_add_skills_table.sql  antigravity-accounts.sql
desktop/src-tauri/web-assets/web/lib/database/schema/: README.md  approval-requests.sql  events-schema.sql  filesystem-edit-schema.sql  healing-log.sql  index.ts  loader.ts
desktop/src-tauri/web-assets/web/lib/email/: email-service.ts
desktop/src-tauri/web-assets/web/lib/management/: sandbox-health.ts
desktop/src-tauri/web-assets/web/lib/models/: model-ranker.ts
desktop/src-tauri/web-assets/web/lib/opencode/: index.ts
desktop/src-tauri/web-assets/web/lib/powers/wasm/: runner.ts
desktop/src-tauri/web-assets/web/lib/retrieval/: hybrid-retrieval.ts
desktop/src-tauri/web-assets/web/lib/sandbox/: auto-suspend-service.ts
desktop/src-tauri/web-assets/web/lib/streaming/: stream-control-handler.ts  stream-state-manager.ts
desktop/src-tauri/web-assets/web/lib/tauri/: invoke-bridge.ts
desktop/src-tauri/web-assets/web/lib/tools/: git-tools.ts
desktop/src-tauri/web-assets/web/lib/virtual-filesystem/: index.ts  smart-context.ts
desktop/src-tauri/web-assets/web/workspace/: e2e-test-file-write.txt  state-test-leak.txt
web/lib/powers/wasm/: Cargo.toml  demo-run.sh  fetchQueue.ts  lib.rs  runner.ts  simpleVfs.ts
(+4510 files in other folders)
