[package]
name = "compute-desktop"
version = "0.1.0"
edition = "2021"
description = "OpenCode Desktop - AI-powered code assistant"
authors = ["OpenCode Team"]

[lib]
name = "opencode_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.8"
tauri = { version = "2.11.0", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-mcp-bridge = { git = "https://github.com/hypothesi/mcp-server-tauri.git", branch = "main", subdirectory = "packages/tauri-plugin-mcp-bridge" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hostname = "0.3"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
reqwest = { version = "0.12", features = ["blocking"] }
portpicker = "0.1"
dirs = "6"
notify = "7"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"
cocoa = "0.26"
accessibility-sys = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authentication",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
] }
uiautomation = "0.16"

[target.'cfg(target_os = "linux")'.dependencies]
atspi = "0.19"
zbus = "3"
